fixed css when the last tweet is too long

--- a/web/css/design.css
+++ b/web/css/design.css
@@ -72,9 +72,13 @@ strong {
 
 #informations {
 	float: left;
-	margin: 35px 0 0 10px;
+	margin: 15px 0 0 10px;
     width: 400px;
     text-align: center;
+}
+
+#loader {
+    padding-top:40px;
 }
 
 #last_tweet ul {
